2004-09-20  Karl Lehenbauer  <karl@sc.com>
	* src/mod_rivet.c (Rivet_PerInterpInit): Load the init.tcl file
	with an explicit path rather than using Tcl_PkgRequire.  Previously, 
	if Rivet was installed with a PREFIX/lib that wasn't already in
	Tcl's package search path (auto_path, probably because it was the
	same lib directory as Tcl used, typically /usr/local/lib), Tcl
	startup is unable to find the RivetTcl package, and Rivet is
	unable to start.  

2004-09-17  Karl Lehenbauer  <karl@sc.com>
	* rivet/packages/rivet/pkgIndex.tcl:  Removed.  It had a hard-coded
	assumption about the shared library extensions (.so).  This file is
	now generated in the target directory by the install node of make.tcl.

	* rivet/pkgIndex.tcl: Removed.  It is generated by the make.tcl
	install process, as above.

	* src/make.tcl: The above changes, specifically the install node 
	now generates the target rivet/pkgIndex.tcl and 
	rivet/packages/rivet/pkgIndex.tcl file using pkg_mkIndex, 
	causing all Tcl-defined and shared-library-defined packages to be 
	discovered and generated into the pkgIndex.tcl.

2004-09-16  Karl Lehenbauer  <karl@sc.com>
	* src/parserPkgInit.c: Added a Rivetparser_SafeInit so the
	C-based standalone Rivet parser library can be loaded
	from safe interpreters.  After inspection, we believe that
	rivet::parserivetdata can be loaded into safe interpreters
	without compromising their security.  rivet::parserivet
	definitely cannot be made available to a safe interpreter --
	it could be manipulated to read files.

	* src/rivetPkgInit.c: Added a Rivet_SafeInit so lib can
	be loaded from safe interpreters, which also makes it work
	better under Mac OS X.

	* src/rivetCrypt.c: Added function header to init routine.
	* src/rivetList.c: (same)
	* src/rivetWWW.c: (same)

	* README.MacOSX: Temporary file to document Mac OS X build quirks.

	* src/configure.tcl: If a configuration variable in
	  tclConfig.sh ever had an equal sign in the "value"